fixed extra space

--- a/css/style.css
+++ b/css/style.css
@@ -199,12 +199,12 @@ main {
 }
 
 .container-info{
+  height: 800px;
   margin-bottom: 20px;
 }
 
 .graph-title{
   left: 23%;
-  margin: 0 0 50px 0;
 }
 
 .graph-title h2{
@@ -220,9 +220,6 @@ main {
 }
 
  .graph {
-  /* z-index: -1; */
-  position: absolute;
-  left: 23%;
   display: grid;
   grid-template-columns: repeat(4, 18%);
   grid-template-rows: 0 18% 18%;
@@ -278,9 +275,8 @@ main {
   line-height: 17px;
 }
 
-.section p {
-  /* left: 23%; */
-}
+/* .section p {
+} */
 
 .author2 {
   margin-top: 50px;
@@ -309,10 +305,17 @@ iframe {
   color: #888;
 }
 
+.img-sat {
+  height: 800px;
+  margin: 10px 0 0 0;
+}
+
+.container-img-sat {
+  left: 23%;
+}
 
 .floating {
   z-index: -1;
-  /* left: 23%; */
   width: 60rem;
   margin: 0;
 }
@@ -354,11 +357,15 @@ iframe {
   color: #666;
 }
 
+.continer-recomended{
+  left: 23%;
+  display: flex;
+}
+
 .container-all-imgs {
   z-index: -1;
-  /* left: 20%; */
   margin-top: 2.2rem;
-  display: flex;
+  height: 1000px;
 }
 
 .container-all-imgs h2 {
@@ -401,11 +408,17 @@ iframe {
 }
 
 .container-footer {
-  width: 1120px;
-  /* left: 20%; */
+  /* width: 1120px; */
+  height: 800px;
   flex-direction: column;
   border-top: 2px solid #e2e2e2;
   border-bottom: 1px solid #e2e2e2;
+}
+
+.container-main__footer{
+  left: 20%;
+  width: 1120px;
+
 }
 
 .main-footer__title {
@@ -453,19 +466,19 @@ iframe {
   margin: 0 0 10px 0;
 }
 
-footer {
-
-}
-
 .nav-footer {
-  /* left: 20%; */
+  height: 50x;
   font-size: 11px;
   margin: 0 0 20px 0;
 }
 
-.footer-list {
-  width: 60%;
+.container-true__footer{
+  left: 20%;
 }
+
+/* .footer-list {
+
+} */
 
 .footer-list li a {
   color: #666;
